--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -473,6 +473,13 @@
         padding: 150px 20px 0;
         height: 100vh;
     }
+    /* iOS only */
+    @supports (-webkit-touch-callout: none) { 
+        .swiper-container .slide_wrap {
+            height: -webkit-fill-available;
+        }
+        
+    }
     .swiper-container .slide_wrap .inner {
         max-width: 100%;
     }
