--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -166,6 +166,9 @@
     background-image: url(../images/bg/bg_main_sec1_03.png);
 }
 .swiper-container .slide_wrap .inner {
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
     width: 100%;
     max-width: 1300px;
     margin: 0 auto;
@@ -209,15 +212,10 @@
 .swiper-container .slide_wrap .inner .sub_tit span::after {
     display: none;
 }
-.swiper-container .slide_wrap.first .inner .tit + .total {
-    padding-top: calc(100px - 50px);
-}
 .swiper-container .slide_wrap .inner .total {
     display: flex;
     gap: 50px 100px;
     flex-wrap: wrap;
-    padding-top: 100px;
-    min-height: 170px;
 }
 .swiper-container .slide_wrap .inner .total li {
     display: flex;
@@ -282,29 +280,38 @@
     color: #fff;
 }
 .shortcuts_box {
-    padding-top: 100px;
+    position: relative;
+    width: calc(100% - 130px);
+    margin: 0 auto;
+    margin-bottom: 50px;
 }
 .shortcuts_box .swiper-wrapper {
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
-.shortcuts_box .swiper-wrapper::before,
-.shortcuts_box .swiper-wrapper::after {
+.shortcuts_box::before,
+.shortcuts_box::after {
     content: "";
     display: block;
+    position: absolute;
+    top: 0;
+    background: no-repeat center;
+    background-size: auto 100%;
     width: 56px;
     height: 169px;
-    background: no-repeat center;
 }
-.shortcuts_box .swiper-wrapper::before {
+.shortcuts_box::before {
+    left: -65px;
     background-image: url(../images/ico/ico_main_sec1_left.png);
 }
-.shortcuts_box .swiper-wrapper::after {
+.shortcuts_box::after {
+    right: -65px;
     background-image: url(../images/ico/ico_main_sec1_right.png);
 }
 .shortcuts_box .swiper-wrapper .swiper-slide {
     width: auto;
+    flex: 1;
 }
 .shortcuts_box .swiper-wrapper .swiper-slide a {
     display: flex;
@@ -429,11 +436,12 @@
         gap: 7px;
     }
     .shortcuts_box .swiper-wrapper .swiper-slide a span {
-        width: 50px;
+        width: 45px;
+        height: 55px;
         background-size: 100%;
     }
     .shortcuts_box .swiper-wrapper .swiper-slide a strong {
-        height: 54px;
+        height: 50px;
         text-align: center;
         word-break: keep-all;
         font-size: 20px;
@@ -526,7 +534,7 @@
     }
     .swiper-container .slide_wrap .inner .total {
         flex-direction: column;
-        gap: 15px 0;
+        gap: 10px 0;
         min-height: 0;
         height: auto;
         justify-content: center;
@@ -534,10 +542,11 @@
     }
     .swiper-container .slide_wrap .inner .total li {
         width: 100%;
+        padding-bottom: 13px;
     }
     .swiper-container .slide_wrap .inner .total li .total_tit {
         align-items: center;
-        font-size: 17px;
+        font-size: 15px;
     }
     .swiper-container .slide_wrap .inner .total li .total_tit::before {
         width: 35px;
@@ -547,17 +556,18 @@
         margin-right: 10px;
     }
     .swiper-container .slide_wrap .inner .total li .total_content strong {
-        line-height: 29px;
-        font-size: 30px;
+        line-height: 24px;
+        font-size: 25px;
     }
     .swiper-container .slide_wrap .inner .total li .total_content span {
-        font-size: 16px;
+        font-size: 14px;
     }
     .shortcuts_box {
         position: relative;
-        padding: 0;
         padding: 0 40px 20px;
         box-sizing: border-box;
+        margin: 0;
+        width: 100%;
     }
     .shortcuts_box .shortcuts_box_content {
         overflow: hidden;
@@ -602,23 +612,21 @@
     .shortcuts_box .swiper-wrapper .swiper-slide {
         max-width: 50%;
         width: 50%;
+        flex: none;
     }
     .shortcuts_box .swiper-wrapper .swiper-slide a em {
         display: none;
     }
     .shortcuts_box .swiper-wrapper .swiper-slide a strong {
-        font-size: 19px;
-    }
-    .shortcuts_box .swiper-wrapper::before,
-    .shortcuts_box .swiper-wrapper::after {
-        display: none;
+        height: 40px;
+        font-size: 15px;
     }
     .shortcuts_box::before,
     .shortcuts_box::after {
         content: "";
         display: block;
         position: absolute;
-        top: 9px;
+        top: 0;
         background: no-repeat center;
         background-size: auto 100%;
         width: 33px;
