--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -475,8 +475,9 @@
     }
     /* iOS only */
     @supports (-webkit-appearance:none) {
-        .fullpage-wrapper .section {
+        .fullpage-wrapper .section.sec1 {
             height: -webkit-fill-available !important;
+            min-height: -webkit-fill-available !important;
         }
     }
     .main_quickmenu {
