--- a/portal/css/main.css
+++ b/portal/css/main.css
@@ -492,7 +492,7 @@
     }
     .swiper-container .slide_wrap {
         padding: 150px 20px 0;
-        min-height: 100vh;
+        height: 100%;
     }
     .swiper-container .slide_wrap .inner {
         max-width: 100%;
