--- a/portal/css/common.css
+++ b/portal/css/common.css
@@ -550,11 +550,21 @@
     font-weight: 400;
     font-size: var(--font-common);
 }
+.tbl_box table tbody tr td a {
+    font-weight: 400;
+    font-size: var(--font-common);
+}
 .tbl_box table tbody tr td a:hover {
     text-decoration: underline;
 }
 .tbl_box table tbody tr td:last-child {
     border-right: none;
+}
+.tbl_box table tbody tr td em {
+    display: none;
+    font-style: normal;
+    font-weight: 400;
+    font-size: var(--font-common);
 }
 
 /* 테이블 타입2 :: 채용공고 */
@@ -789,6 +799,8 @@
     font-weight: 400;
 }
 .tbl_longcard > ul > li > a .tit strong {
+    display: flex;
+    align-items: center;
     font-size: 20px;
     font-weight: 500;
     color: #666;
@@ -830,9 +842,10 @@
 }
 .tbl_card > ul > li {
     display: flex;
-    flex-direction: column;
     overflow: hidden;
     position: relative;
+    flex-direction: column;
+    justify-content: space-between;
     width: calc(33.33% - 20px);
     padding: 30px 20px;
     box-sizing: border-box;
@@ -848,6 +861,103 @@
     width: 100%;
     height: 3px;
     background-color: #333;
+}
+.tbl_card > ul > li .txt {
+    display: flex;
+    flex-direction: column;
+    padding: 20px 0 30px;
+}
+.tbl_card > ul > li .txt strong {
+    font-size: 20px;
+    font-weight: 500;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    margin-bottom: 10px;
+}
+.tbl_card > ul > li .txt span {
+    max-width: 100%;
+    font-size: 14px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+}
+.tbl_card > ul > li .txt:hover strong,
+.tbl_card > ul > li .txt:hover span {
+    text-decoration: underline;
+}
+.tbl_card > ul > li .info {
+    display: flex;
+    justify-content: flex-end;
+    gap: 5px;
+    padding-top: 30px;
+    border-top: 1px solid #e2e2e2;
+}
+.tbl_card > ul > li .info li {
+    font-size: 14px;
+}
+.tbl_card > ul > li .info li + li::before {
+    content: "ㅣ";
+    margin-right: 5px;
+}
+
+/* faq */
+.tbl_faq {
+    border-top: 1px solid #333;
+}
+.tbl_faq ul li {
+    display: flex;
+    flex-direction: column;
+}
+.tbl_faq ul li a {
+    display: flex;
+    padding: 20px 0;
+    border-bottom: 1px solid #e2e2e2;
+}
+.tbl_faq ul li a dl {
+    display: flex;
+    gap: 15px;
+    width: 100%;
+}
+.tbl_faq ul li a dl dt,
+.tbl_faq ul li a dl dd {
+    line-height: 24px;
+    font-size: var(--font-common);
+    font-weight: 400;
+    color: #3f89e5;
+}
+.tbl_faq ul li a dl dt {
+    max-width: 170px;
+}
+.tbl_faq ul li a dl dd {
+    max-width: calc(100% - 185px);
+}
+.tbl_faq ul li a dl dd::before {
+    content: "Q";
+    margin-right: 5px;
+}
+.tbl_faq ul li .answer {
+    display: none;
+    position: relative;
+    padding: 50px 40px 50px 70px;
+    box-sizing: border-box;
+    border-bottom: 1px solid #e2e2e2;
+    background-color: #eef4fc;
+    line-height: 24px;
+}
+.tbl_faq ul li .answer::before {
+    content: "";
+    display: flex;
+    position: absolute;
+    top: 55px;
+    left: 40px;
+    width: 18px;
+    height: 13px;
+    background: url(../images/ico/ico_faq_arrow_right.png) no-repeat center;
 }
 
 /* 카드테이블 타입1 :: 벤처투자TALK */
@@ -1197,13 +1307,13 @@
     border-radius: 5px;
     box-shadow: 2px 2px 6px 0px rgb(0 0 0 / 5%);
 }
-.chk_list.type_02 li {
+.chk_list.type_02 > li {
     padding: 20px 0;
 }
-.chk_list.type_02 li + li {
+.chk_list.type_02 > li + li {
     border-top: 1px solid #d9e1e7;
 }
-.chk_list.type_02 li .chk_box span {
+.chk_list.type_02 > li .chk_box span {
     justify-content: flex-start;
     align-items: center;
     width: calc(100% / 7);
@@ -1527,6 +1637,59 @@
         font-size: 14px;
     }
 
+    /* statebox */
+    .state_box > * {
+        padding: 4px 7px;
+        font-size: 11px;
+    }
+
+    /* 테이블 */
+    .tbl_box table {
+        table-layout: fixed;
+    }
+    .tbl_box table colgroup {
+        display: flex;
+    }
+    .tbl_box table thead {
+        display: none;
+    }
+    .tbl_box table tbody tr {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 2px;
+        padding: 15px 0;
+        border-bottom: 1px solid #e2e2e2;
+    }
+    .tbl_box table tbody tr td {
+        width: 100%;
+        padding: 0;
+        border: none;
+        text-align: left;
+    }
+    .tbl_box table tbody tr td.tbl_num {
+        display: none;
+    }
+    .tbl_box table tbody tr td.tbl_tit {
+        display: flex;
+        flex-wrap: wrap;
+        align-items: center;
+    }
+    .tbl_box table tbody tr td.tbl_tit a {
+        max-width: calc(100% - 50px);
+        margin: 5px 0;
+        font-size: 18px;
+        font-weight: 500;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        display: -webkit-box;
+        -webkit-line-clamp: 2;
+        -webkit-box-orient: vertical;
+    }
+    .tbl_box table tbody tr td em {
+        display: inline-block;
+        margin-right: 5px;
+    }
+    
     /* 게시판 타입1 ::  */
     .tbl_longcard > ul {
         gap: 10px;
@@ -1538,6 +1701,21 @@
     .tbl_longcard > ul > li .info {
         bottom: 15px;
         right: 15px;
+    }
+
+    /* 카드게시판 :: 용어사전 */
+    .tbl_card > ul {
+        gap: 10px;
+    }
+    .tbl_card > ul > li {
+        width: 100%;
+        padding: 15px;
+    }
+    .tbl_card > ul > li .txt {
+        padding: 20px 0;
+    }
+    .tbl_card > ul > li .info {
+        padding-top: 15px;
     }
 
     /* 테이블 상세 */
@@ -1638,13 +1816,13 @@
     }
 
     /* 카드테이블 타입5 :: 투자자 검색 */
-    .chk_list.type_03 li .chk_box {
+    .chk_list.type_03 > li .chk_box {
         gap: 10px;
     }
-    .chk_list.type_03 li .chk_box span {
+    .chk_list.type_03 > li .chk_box span {
         padding-left: 0;
     }
-    .chk_list.type_02 li + li {
+    .chk_list.type_02 > li + li {
         border-top: 0;
         padding-top: 0;
     }
@@ -1714,10 +1892,42 @@
         height: 40px;
     }
 
+    /* faq */
+    .tbl_faq ul li a dl {
+        flex-direction: column;
+        gap: 5px;
+    }
+    .tbl_faq ul li a dl dt {
+        max-width: 100%;
+    }
+    .tbl_faq ul li a dl dd {
+        max-width: 100%;
+    }
+    .tbl_faq ul li .answer {
+        padding: 15px 15px 15px 40px;
+    }
+    .tbl_faq ul li .answer::before {
+        top: 20px;
+        left: 15px;
+    }
+
     /* 탭 */
+    .tab_group {
+
+    }
+    .tab_group > ul {
+        overflow-x: auto;
+        gap: 15px;
+    }
+    .tab_group > ul > li {
+        flex: none;
+    }
     .tab_group > ul > li > a {
         padding: 10px 0;
         font-size: 18px;
+    }
+    .tab_group > ul > li.on > a {
+        border-bottom: 3px solid #1c44c8;
     }
     .tab_group .tab_content > div {
         padding: 20px 0;
